# daimon

./: .gitignore  AGENTS.md  ARCHITECTURE.md  BUILDING.md  Cargo.toml  END_GOAL.md  LICENSE  NEURAL.md  OPENWORLD.md  OVERNIGHT.md  PLAN.md  POET.md  PROOFS.md  PROVENANCE.md  README.md  RESEARCH.md  ROADMAP.md  VIRTUAL_DAVID.md  WHITEPAPER.md
brochure/: README.md  brand.json  content.json  generate.js  package-lock.json  package.json
crates/daimon-core/: Cargo.toml
crates/daimon-core/src/: action.rs  assoc.rs  drive.rs  goal.rs  lib.rs  memory.rs  percept.rs  rng.rs  serdeutil.rs  types.rs  world_model.rs
crates/daimon-demo/: Cargo.toml
crates/daimon-demo/src/: main.rs
crates/daimon-ffi/: Cargo.toml
crates/daimon-ffi/include/: daimon.h
crates/daimon-ffi/src/: lib.rs
crates/daimon-game/: Cargo.toml  README.md
crates/daimon-game/examples/: autogenesis.rs  autogenesis_trace.rs  banner.rs  believability.rs  benchmark.rs  ceiling.rs  chronicle.rs  civ_diag.rs  defense.rs  diagnose_survival.rs  eras_diag.rs  evolve_frontier.rs  evolve_headless.rs  evolve_overnight.rs  frontier_calib.rs  headless.rs  hell.rs  hell_coord.rs  lifecycle_diag.rs  overlay_ab.rs  overlay_evolve.rs  poet.rs  proofs.rs  redqueen.rs  scale.rs  society_diag.rs  study.rs  super_mind.rs  village_diag.rs  war_diag.rs  winter_smoke.rs
crates/daimon-game/src/: evolve_mode.rs  fitness.rs  geo.rs  gfx.rs  hell.rs  interior.rs  lib.rs  main.rs  math.rs  poet.rs  redqueen.rs  scene.rs  shader.wgsl  sim.rs  view.rs  world.wgsl
crates/daimon-game/web/: .gitignore  index.html
crates/daimon-mind/: Cargo.toml
crates/daimon-mind/src/: affect.rs  anticipation.rs  crit.rs  deliberate.rs  dialogue.rs  entangle.rs  evolve.rs  imagine.rs  language.rs  learn.rs  lib.rs  llm.rs  mind.rs  overlay.rs  persona.rs  planner.rs  praxis.rs  project.rs  qcog.rs  reciprocity.rs  stigmergy.rs  theory_of_mind.rs  thought.rs
crates/daimon-mind/tests/: narration_golden.rs
crates/daimon-sdk/: Cargo.toml  README.md
crates/daimon-sdk/examples/: alloc_probe.rs  frost_oak_room.rs  minimal.rs
crates/daimon-sdk/src/: lib.rs
crates/daimon-world/: Cargo.toml
crates/daimon-world/src/: lib.rs
integrations/frost-oak/: AGENTS.md
integrations/unity/: AGENTS.md  README.md  package.json
integrations/unity/Runtime/: DaimonAgent.cs  DaimonNative.cs
integrations/unreal/: AGENTS.md  README.md
integrations/unreal/DaimonCore/: DaimonCore.Build.cs
integrations/unreal/DaimonCore/Private/: DaimonAgent.cpp  DaimonAgentComponent.cpp  DaimonCoreModule.cpp
integrations/unreal/DaimonCore/Public/: DaimonAgent.h  DaimonAgentComponent.h  DaimonCoreModule.h
integrations/unreal/Example/: DaimonNpcActor.cpp  DaimonNpcActor.h
scripts/: build-web.sh  build_pdf.py  demo.sh  smallworld-shot.sh  viz-training.sh
viz/: README.md  index.html  training_data.json
